--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
+html {
+  padding-right: 0 !important;
+  overflow-y: scroll !important;
+}
